--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
     "start": "docker-compose up -d",
     "restart": "npm run stop && npm run start",
     "stop": "docker-compose down",
+    "lint": "eslint **/*.js --fix",
     "test": "protractor -- ./test/config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
     "jasmine": "^3.5.0",
     "jasmine-spec-reporter": "^5.0.2",
+    "prettier": "^2.0.5",
     "protractor": "^7.0.0"
-  }
+  },
+  "dependencies": {}
 }
